# qt_create_Jetson_nano

./: README.md  package.xml  setup.py
src/qt_create/: create.py
src/qt_create/templates/qtros/: CMakeLists.txt  package.xml
src/qt_create/templates/qtros/src/: main.cpp  mainwindow.cpp
